# rent

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
ml/: predict.py  train_model.py
prisma/: schema.prisma
prisma/migrations/20260427213400_init/: migration.sql
prisma/migrations/20260429170000_reservation_datetime_period/: migration.sql
prisma/migrations/20260430000000_client_extra_fields/: migration.sql
prisma/migrations/20260501000000_car_image_url/: migration.sql
prisma/migrations/20260501010000_client_birthplace_nationality_unique/: migration.sql
prisma/migrations/20260501020000_reservation_second_client/: migration.sql
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.tsx  layout.tsx  router.tsx
src/components/: ConfirmDialog.tsx  DataTable.tsx  Header.tsx  NotificationBell.tsx  PageTransition.tsx  Pagination.tsx  Sidebar.tsx  StatusBadge.tsx  ToastViewport.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx
src/hooks/: useNotifications.ts  useToast.tsx
src/lib/: constants.ts
src/pages/ai/: AIForecastPage.tsx
src/pages/cars/: CarDetails.tsx  CarForm.tsx  (+1 more)
src/services/: aiForecastService.ts  car.service.ts  client.service.ts  contract.service.ts  invoke.ts  payment.service.ts  reservation.service.ts
src/types/: aiForecast.ts  car.ts  client.ts  contract.ts  payment.ts  reservation.ts
src/utils/: car.ts  client.ts  date.ts  excel.ts  money.ts  pdf.ts  rapportPdf.ts  validation.ts
(+17 files in other folders)
